<resources>
    <string name="app_name">Shared parking spaces</string>
    <string name="please_login">点击我登陆哦</string>
    <string name="all_groups">所有组</string>
    <string name="user_info">个人信息</string>
    <string name="my_order">我的订单</string>
    <string name="add_us">加入共享</string>
    <string name="about_us">关于我们</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="title_activity_login">Sign in</string>

    <string name="reserve">预定</string>
    <string name="get_lots_error">获取停车场错误</string>

    <!-- Strings related to login -->
    <string name="prompt_phone_num">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_again">再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="sms_login">短信验证码登陆</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">这怕不是手机号码吧</string>
    <string name="error_invalid_password">密码需要六位以上</string>
    <string name="error_invalid_password_again">两次输入密码不一致</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这是必填的</string>
    <string name="sign_in_result">登陆结果</string>
    <string name="password_error">密码错误</string>
    <string name="sign_in_error_json_error">json 出错，登陆不成功</string>
    <string name="user_not_exist">用户不存在，跳转到注册页面</string>
    <string name="sign_in_success">登陆成功</string>
    <string name="back">返回</string>
    <string name="sign_in_again">重新登陆</string>

    <string name="sign_up_result">注册结果</string>
    <string name="sign_up_error">注册失败（添加数据库失败）</string>
    <string name="sign_up_error_json_error">json 出错，注册不成功</string>
    <string name="user_exist">用户已存在</string>
    <string name="sign_up_success">注册成功</string>
    <string name="sign_up_again">重新注册</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out">退出登录</string>
    <string name="no">否</string>
    <string name="yes">是</string>

    <!--edit info-->
    <string name="tel_num">号   码: </string>
    <string name="user_name">昵       称: </string>
    <string name="sex">性         别: </string>
    <string name="birthday">生         日: </string>
    <string name="plate_name">车         牌: </string>
    <string name="can_not_edit">不可修改</string>
    <string name="edit_birth">填写生日</string>
    <string name="save">保 存</string>
    <string name="click_to_manage">点击管理</string>
    <string name="no_user">没有用户</string>
    <string name="edit_user_name">修改用户名</string>
    <string name="ok">确定</string>
    <string name="add_plate">添加车牌</string>
    <string name="plate_manage">车牌管理</string>
    <string name="plate_invalid">车牌号不符合要求或重复添加</string>

</resources>
