<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="graduationdesign.sharedparkingspaces.view.UserInfoActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/user_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorLightGreen">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/tel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/user_info_toolbar"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tel_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prompt_phone_num"/>

        <TextView
            android:id="@+id/info_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/tel_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/user_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/info_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sex_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/user_name_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sex_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex"/>

        <TextView
            android:id="@+id/info_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthday_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/sex_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/birthday_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/birthday"/>

        <TextView
            android:id="@+id/info_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/plates_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/birthday_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/plates_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plate_name"/>

        <TextView
            android:id="@+id/info_plates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>

</RelativeLayout>
